--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <article>
-
+            <section class="image"></section>
         </article>
         <div class="bg"></div>
     </main>
