--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <main>
         <article>
+            <seciton class="logo"></seciton>
+            <section class="login">
+                <div class="t"></div>
+                <div class="m"></div>
+                <div class="b"></div>
+            </section>
             <section class="image"></section>
         </article>
         <div class="bg"></div>
