--- a/index.html
+++ b/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
 <html lang="zh">
+
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>taurus_website</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <main>
         <article>
             <seciton class="logo"></seciton>
             <section class="login">
-                <div class="t"></div>
-                <div class="m"></div>
-                <div class="b"></div>
+                <div class="t">
+                    <div class="n">新版頁面</div>
+                    <div class="o active">舊版頁面</div>
+                </div>
+                <div class="m">
+                    <div class="mt">帳號
+                        <input type="text">
+                    </div>
+                    <div class="mb">密碼
+                        <input type="text">
+                    </div>
+                </div>
+                <div class="b">立即登入</div>
             </section>
             <section class="image"></section>
         </article>
@@ -21,4 +33,5 @@
     </main>
     <div class="iebg"></div>
 </body>
+
 </html>
