--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>taurus_website</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/ie11.css">
+    <!--[if IE 9]>
+        <link rel="stylesheet" href="./css/ie9.css">
+    <![endif]-->
 </head>
 
 <body>
